fix scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,17 +5,11 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
+  
   display: flex;
   flex-direction: column;
   
-  @media screen and (min-width: 1024px) {
-    height: 100vh;
-  }
-  @media screen and (max-width: 1024px)and(min-width: 768px) {
-    height: 100vh;
-    
-  }
+ 
   
 }
 
